improve dialog
