# shared/api/v1/openapi.yaml
@@ -2387,7 +2387,9 @@ paths:
                         last_watch_seconds:
                           type: integer
                           minimum: 0
-                      required: [ video_id, channel_id, external_video_thumbnail_url, external_channel_icon_url, external_video_title, external_channel_display_name, external_video_created_at, external_video_length_seconds ]
+                        is_watched:
+                          type: boolean
+                      required: [ video_id, channel_id, external_video_thumbnail_url, external_channel_icon_url, external_video_title, external_channel_display_name, external_video_created_at, external_video_length_seconds, is_watched ]
                 required: [ item_count, has_next, items ]
         "400":
           $ref: "#/components/responses/BadRequest"
